<resources>
    <string name="app_name">Monitoring Siswa - Guru</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kategori_pelanggaran">Kategori Pelanggaran</string>
    <string name="nomor_induk_siswa">Nomor Induk Siswa</string>
    <string name="pelanggaran">Pelanggaran</string>
    <string name="poin_pelanggaran">Poin Pelanggaran</string>
    <string name="home">HOME</string>
    <string name="input_pelanggaran">INPUT PELANGGARAN</string>
    <string name="catatan">Catatan</string>
</resources>
